feat: update CV

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 width="25"
                 height="25"
               />
-              <div>Minsk (Belarus)<br />Nairobi (Kenya)</div>
+              <div>Minsk (Belarus)</div>
             </li>
             <li class="contacts__item">
               <img
@@ -49,9 +49,13 @@
                 width="25"
                 height="25"
               />
-              <a class="contacts__link" href="https://t.me/mkoroleva5" target="_blank"
-                >@mkoroleva5</a
+              <a
+                class="contacts__link"
+                href="https://t.me/mkoroleva5"
+                target="_blank"
               >
+                mkoroleva5
+              </a>
             </li>
             <li class="contacts__item">
               <img
@@ -65,8 +69,9 @@
                 class="contacts__link"
                 href="https://github.com/mkoroleva5"
                 target="_blank"
-                >mkoroleva5</a
               >
+                mkoroleva5
+              </a>
             </li>
             <li class="contacts__item">
               <img
@@ -80,8 +85,9 @@
                 class="contacts__link"
                 href="https://www.linkedin.com/in/mkoroleva5/"
                 target="_blank"
-                >mkoroleva5</a
               >
+                mkoroleva5
+              </a>
             </li>
           </ul>
         </section>
@@ -89,12 +95,18 @@
           <h2 class="section__title courses-title">Courses</h2>
           <ul class="section__list">
             <li>HTML and CSS Courses on codecademy.com</li>
-            <li><b>The Rolling Scopes School</b> «JavaScript/Front-end. Pre-school»</li>
+            <li>
+              <b>The Rolling Scopes School</b> «JavaScript/Front-end.
+              Pre-school»
+            </li>
             <li>
               <b>The Rolling Scopes School</b> «JavaScript/Front-end. Frontend
               developer»
             </li>
-            <li><b>The Rolling Scopes School</b> «JavaScript/Front-end. React»</li>
+            <li>
+              <b>The Rolling Scopes School</b> «JavaScript/Front-end. React»
+            </li>
+            <li><b>Ulbi TV.</b> Advanced React</li>
           </ul>
         </section>
         <section>
@@ -116,8 +128,10 @@
           <h2 class="section__title about-title">About me</h2>
           <hr />
           <div class="about">
-            The Rolling Scopes School (JavaSctipt/Front-end) - position 15 out of
-            1250.<br />The Rolling Scopes School (Pre-school) - position 1 out of 11000.
+            The Rolling Scopes School (React) - position 1 out of 550.<br />
+            The Rolling Scopes School (JavaSctipt/Front-end) - position 15 out
+            of 1250.<br />The Rolling Scopes School (Pre-school) - position 1
+            out of 11000.
           </div>
         </section>
         <section>
@@ -125,144 +139,112 @@
           <hr />
           <div class="about">
             <ul class="list">
-              <li>JavaScript, TypeScript, ReactJS</li>
+              <li>React, Vue3, Nuxt, TypeScript, JavaScript, HTML5, CSS3</li>
+              <li>Feature-Sliced Design, Webpack, Vite, Gulp</li>
+              <li>Redux Toolkit, Zustand, Pinia, Vuex</li>
+              <li>React Query, Axios, Redux Thunk</li>
+              <li>Jest, React Testing Library - Cypress, Storybook, Loki</li>
               <li>
-                Webpack/Vite, Zustand/Redux Toolkit, Jest/Vitest/Cypress/React Testing
-                Library
+                i18n, React Spring, CodeMirror, Git, Figma, Photoshop etc.
               </li>
-              <li>HTML5, CSS3, Git, Figma, Photoshop</li>
             </ul>
           </div>
         </section>
-        <!-- <section class="section__projects">
-          <h2 class="section-title projects-title">Projects</h2>
-          <hr />
-          <div class="projects__wrapper">
-            <div class="projects__item">
-              <a
-                class="project-title"
-                href="https://github.com/mkoroleva5/rs_GraphiQL_front"
-                target="_blank"
-                >GraphiQL</a
-              >
-              <div>
-                Clone of GraphiQL - GraphQL integrated development environment (IDE).
-              </div>
-              <div>Tech stack: React, TypeScript, Vite, Redux Toolkit, Firebase, Axios, i18n, CodeMirror, React Hook Form, React Toastify</div>
-            </div>
-            <div class="projects__item">
-              <a
-                class="project-title"
-                href="https://github.com/MOONcitizenX/rs-blazing-8-client"
-                target="_blank"
-                >Blazing 8s</a
-              >
-              <div>
-                Clone of card game "Blazing 8s" with own multiplayer back-end and colorful
-                animations.
-              </div>
-              <div>
-                Tech stack: React, TypeScript, Vite, React Spring, Zustand, NestJS, Socket.io
-              </div>
-            </div>
-            <div class="projects__item">
-              <a
-                class="project-title"
-                href="https://github.com/mkoroleva5/online-store"
-                target="_blank"
-                >Online store</a
-              >
-              <div>Online store of healthy food built with React.</div>
-              <div>Tech stack: React, TypeScript, Vite, Vitest, React Testing Library</div>
-            </div>
-            <div class="projects__item">
-              <a
-                class="project-title"
-                href="https://github.com/mkoroleva5/rsschool-react-course"
-                target="_blank"
-                >React app</a
-              >
-              <div>React app with Unsplash API fetching, forms, own server and SSR.</div>
-              <div>Tech stack: React, TypeScript, ExpressJS, SSR, Vite, Vitest, React Testing Library, Cypress, Redux Toolkit, AsyncThunk, React hook form</div>
-            </div>
-            <div class="projects__item">
-              <a
-                class="project-title"
-                href="https://github.com/mkoroleva5/async-race"
-                target="_blank"
-                >Async Race</a
-              >
-              <div>
-                Race created using communication with a server (fetch, REST API), async coding /
-                promises and JS animations.
-              </div>
-              <div>Tech stack: JavaScript, HTML5, CSS3, Vite</div>
-            </div>
-            <div class="projects__item">
-              <a
-                class="project-title"
-                href="https:///gem-puzzle-mkoroleva5.netlify.app/"
-                target="_blank"
-                >Gem Puzzle</a
-              >
-              <div>
-                The classic "15 puzzle" game with resizable fields, stoppable timer and
-                drag'n'drop.
-              </div>
-              <div>Tech stack: JavaScript, HTML5, CSS3, Webpack, MVC</div>
-            </div>
-          </div>
-        </section> -->
         <section>
           <h2 class="section__title">Experience</h2>
           <hr />
           <div class="experience__wrapper">
             <div class="experience__item">
+              <p class="experience__date">2023</p>
+              <div class="experience__desc">
+                <p class="experience__org">LSD-agency (Remote)</p>
+                <div class="experience__position">
+                  <p class="experience__stack">
+                    Tech stack: Vue3, Nuxt, TypeScript, Pinia, Vuex, Axios,
+                    i18n, Gulp, SCSS, Swiper, Strapi, Figma
+                  </p>
+                  <ul class="list exp-list">
+                    <li>
+                      Developing responsive websites and online-stores based on
+                      Figma layouts
+                    </li>
+                    <li>
+                      Working with API fetching from Strapi / own back-end
+                    </li>
+                    <li>Developing mini-games and quizzes</li>
+                    <li>Working with authorization, state managers, routing</li>
+                    <li>Creating JS animations</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="experience__item">
               <p class="experience__date">2022-2023</p>
               <div class="experience__desc">
-                <p class="experience__org">Company (Remote)</p>
-                <p class="experience__position">
-                  Tech stack: ReactJS, TypeScript, Vite, Redux Toolkit, Axios,
-                  i18n, CodeMirror, React Hook Form, React Toastify, React Spring
+                <p class="experience__org">
+                  The Rolling Scopes School - Trainee (Remote)
+                </p>
+                <div class="experience__position">
+                  <p class="experience__stack">
+                    Tech stack: ReactJS, TypeScript, Vite, Redux Toolkit, Axios,
+                    i18n, CodeMirror, React Hook Form, React Toastify, React
+                    Spring
+                  </p>
                   <ul class="list exp-list">
-                    <li>Implementing responsive/adaptive and UI/UX-friendly designs</li>
+                    <li>
+                      Implementing responsive/adaptive and UI/UX-friendly
+                      designs
+                    </li>
                     <li>Working with API fetching (React Query, Axios)</li>
-                    <li>Creating GraphQL integrated development environment (IDE)</li>
-                    <li>Working with state managers (RTK, Zustand) and routing (React Router)</li>
+                    <li>
+                      Creating GraphQL integrated development environment (IDE)
+                    </li>
+                    <li>
+                      Working with state managers (RTK, Zustand) and routing
+                      (React Router)
+                    </li>
                     <li>Creating JS animations (Spring, Framer-Motion)</li>
                     <li>Testing (Jest, React Testing Library, Cypress)</li>
                   </ul>
-                </p>
+                </div>
               </div>
             </div>
-            <div class="experience__item">
-              <p class="experience__date">2017-2022</p>
-              <div class="experience__desc">
-                <p class="experience__org">Biogarden LLC (Minsk, Belarus)</p>
-                <p class="experience__position">Head of E-commerce</p>
+            <div class="experience__block">
+              <div class="experience__item">
+                <p class="experience__date">2017-2022</p>
+                <div class="experience__desc">
+                  <p class="experience__org">
+                    Biogarden LLC<br />(Minsk, Belarus)
+                  </p>
+                  <p class="experience__position">Head of E-commerce</p>
+                </div>
               </div>
-            </div>
-            <div class="experience__item">
-              <p class="experience__date">2016</p>
-              <div class="experience__desc">
-                <p class="experience__org">Farmin ALC (Minsk, Belarus)</p>
-                <p class="experience__position">Sales representative</p>
+              <div class="experience__item">
+                <p class="experience__date">2016</p>
+                <div class="experience__desc">
+                  <p class="experience__org">
+                    Farmin ALC<br />(Minsk, Belarus)
+                  </p>
+                  <p class="experience__position">Sales representative</p>
+                </div>
               </div>
-            </div>
-            <div class="experience__item">
-              <p class="experience__date">2015</p>
-              <div class="experience__desc">
-                <p class="experience__org">Tour operator Gartour (Milan, Italy)</p>
-                <p class="experience__position">Tourism manager</p>
+              <div class="experience__item">
+                <p class="experience__date">2015</p>
+                <div class="experience__desc">
+                  <p class="experience__org">
+                    Tour operator Gartour<br />(Milan, Italy)
+                  </p>
+                  <p class="experience__position">Tourism manager</p>
+                </div>
               </div>
-            </div>
-            <div class="experience__item">
-              <p class="experience__date">2013-2014</p>
-              <div class="experience__desc">
-                <p class="experience__org">
-                  Embassy of Italian Republic (Minsk, Belarus)
-                </p>
-                <p class="experience__position">Account manager</p>
+              <div class="experience__item">
+                <p class="experience__date">2013-2014</p>
+                <div class="experience__desc">
+                  <p class="experience__org">
+                    Embassy of Italian Republic<br />(Minsk, Belarus)
+                  </p>
+                  <p class="experience__position">Account manager</p>
+                </div>
               </div>
             </div>
           </div>
@@ -277,8 +259,8 @@
                 Belarusian State University, Faculty of International Relations
               </p>
               <p class="experience__position">
-                Qualification: economist-manager and interpreter-translator (English and
-                Italian languages)
+                Qualification: economist-manager and interpreter-translator
+                (English and Italian languages)
               </p>
             </div>
           </div>
